2004-10-25  Richard B. Kreckel  <kreckel@ginac.de>

	* src/base/cl_low.h: Add mulu64 assembler macro for ia64.

2004-10-24  Richard B. Kreckel  <kreckel@ginac.de>

	* src/base/cl_low.h: Add mul and div macros for x86_64.

2004-10-23  Richard B. Kreckel  <kreckel@ginac.de>

	* src/integer/conv/cl_I_from_digits.cc (digits_to_I): Fix thinko in
	new code for base power of two.

2004-10-22  Richard B. Kreckel  <kreckel@ginac.de>

	* src/integer/conv/cl_I_to_digits (I_to_digits): Fix an elusive stack
	overwriting problem. That was the real cause for Debian bug#246319.
	* src/integer/output/cl_I_print.cc (print_integer): Revert workaround
	for the bug fixed above.

2004-10-20  Richard B. Kreckel  <kreckel@ginac.de>

	* include/cln/types.h: Use 64 bit digits on x86_64 CPU.

2004-10-12  Richard B. Kreckel  <kreckel@ginac.de>

	* src/integer/conv/cl_I_from_digits.cc (digits_to_I): Speedup when
	the base is a power of two.

2004-10-05  Richard B. Kreckel  <kreckel@ginac.de>

	* src/integer/conv/cl_I_to_digits.cc (I_to_digits): Fix bug in base 32.

2004-09-27  Richard B. Kreckel  <kreckel@ginac.de>

	Support for little-endian Mips, second shot
	* src/base/digitseq/cl_asm_mipsel_.cc: New file...
	* src/base/digitseq/cl_asm_cc: ...used here.
	* src/base/digitseq/cl_asm.h: Include cl_asm_mips.h for any endianness.
	* include/cln/object.h: Set alignment for mipsel explicitly.

2004-09-05  Richard B. Kreckel  <kreckel@ginac.de>

	Support for little-endian Mips
	* include/cln/config.h.in: Add __mipsel__.
	* include/cln/modules.h: For Mips, this is endianness-agnostic.
	* src/base/digitseq/cl_asm_.cc, src/base/digitseq/cl_asm.h:
	Mask out assembler for little-endian Mips.

2004-08-30  Bruno Haible  <bruno@clisp.org>

	* benchmarks/timebench2.sh: Multiply all repeat counts by 100.
	* benchmarks/timebench2.results: Add recent PowerPC G4 results.

2004-08-26  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* examples/e.cc: remove extra semicolon.

2004-08-25  Bruno Haible  <bruno@clisp.org>